--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,2 @@
 <% @posts.each do |post| %>
-  <div><%= post.title %></div>
-<% end %>
+ <div><%= post.title %> - <%= last_updated post %></div><% end %>
