--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,8 +1,10 @@
 <%= form_for(@post) do |f| %>
+  <label><%= last_updated @post %></label><br>
+  <br>
   <label>Post title:</label><br>
   <%= f.text_field :title %><br>
 
-  <label>Post Description</label><br>
+  <label>Post Description:</label><br>
   <%= f.text_area :description %><br>
 
   <%= f.submit %>
